# pretty-dancer

./: .env.defaults  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  <MagicMock name='load_settings().cost_db_path' id='139640484117488'>  CLAUDE.md  README.md  agents.research-desk.toml  agents.toml  justfile  pyproject.toml
.claude/commands/: tom-audit.md  tom-build.md  tom-plan.md
.serena/: project.yml
clusters/default/: agents.mcp.json  agents.mcp.secrets.example.json  agents.toml
clusters/default/prompts/: editor.md  technical.md  triage.md  writer.md
clusters/platform-architect/: agents.mcp.json  agents.toml
clusters/platform-architect/prompts/: architect.md
clusters/research-desk/: agents.toml
docs/: cluster-configuration-guide.md  implementation-guide.md  roadmap.md  workflow.md
docs/adr/: README.md
prompts/: alfa.md  beta.md  billing.md  critic.md  digger.md  edith.md  escalation.md  fundamentals.md  linguist.md  prose.md  researcher.md  risk.md  scout.md  supervisor.md  vera.md
prompts/research-desk/: risk.md
prompts/routers/: editorial_gate.md  research_supervisor.md
scripts/: browse_threads.py  compare_runs.py  ingest_docs.py  show_costs.py  show_run.py  show_thread.py
src/multiagent/: __init__.py  constants.py  exceptions.py  models.py  version.py
src/multiagent/cli/: chat.py  (+9 more)
tasks/: 001-skeleton.md  002-transport.md  003-agent-code.md  004-cli-wiring.md  005-CR1.md  005-CR2.md  005-CR3.md  005-observability.md  006-CR1.md  006-checkpointer.md  007-thread-id.md  008-start.md  009-cost-tracking.md  010-termination.md  011a-multiparty-messaging.md  011b-routing.md  013-mcp-tools.md  013a-experiment-configs.md  013b-cluster-refactor.md  013c-post-refactor-cleanup.md  README.md  TUI-monitor.md  cc-go-template.md  cc-init-template.md
tasks/feedback/: 013b-cluster-refactor-feedback.md  013c-post-refactor-cleanup-feedback.md
tasks/plans/: 008-start-plan.md  009-cost-tracking.md  010-termination-plan.md  011a-multiparty-messaging.md  011b-routing-plan.md  013-mcp-tools-plan.md  013b-cluster-refactor-plan.md  013c-implementation-guide-audit.md  013c-post-refactor-cleanup-plan.md  TUI-monitor-plan.md  implementation-guide-audit.md
tests/: conftest.py
tests/fixtures/: agents.mcp.json  agents.mcp.secrets.json  agents.toml
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: test_module_boundaries.py  test_version.py
(+49 files in other folders)
