[project]
name = "multiagent"
version = "0.1.1"
description = "Multi-agent LLM system proof of concept"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
    "typer>=0.12",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "respx",
    "pre-commit",
    "rich>=13.0",
]

[project.scripts]
multiagent = "multiagent.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multiagent"]

# --- ruff ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (enforce type hints)
    "D",    # pydocstyle (enforce docstrings)
    "ASYNC",# flake8-async
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100", # missing docstring in public module (handled by __init__.py convention)
    "D104", # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]   # relax annotations and docstrings in tests
"src/multiagent/cli/**" = ["BLE001"]  # broad exception catch allowed at CLI boundary

# --- pyright ---
[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring real LLM (deselect with -m 'not integration')",
    "slow: marks tests as slow",
]
addopts = "-v --tb=short -m 'not integration'"

# --- coverage ---
[tool.coverage.run]
source = ["src/multiagent"]
omit = ["src/multiagent/cli/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
